--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.16.3"
+        "express": "^4.16.3",
+        "i": "^0.3.6",
+        "npm": "^6.9.0",
+        "socket.io": "^2.2.0"
     }
 }
